--- a/pom.xml
+++ b/pom.xml
@@ -10,19 +10,40 @@
 	<!--packaging / -->
 	<packaging>pom</packaging>
 	<!--name / -->
+	<name>Hamcrest extensions</name>
 	<!--version / -->
 	<version>1.0.0</version>
 	<!--description / -->
+	<description></description>
 	<!--url / -->
+	<url>https://github.com/nhojpatrick/nhojpatrick-hamcrest</url>
 	<!--prerequisites / -->
 	<!--issueManagement / -->
 	<!--ciManagement / -->
 	<!--inceptionYear / -->
+	<inceptionYear>2018</inceptionYear>
 	<!--mailingLists / -->
 	<!--developers / -->
+	<developers>
+		<developer>
+			<name>John Patrick</name>
+			<email>142304+nhojpatrick@users.noreply.github.com</email>
+		</developer>
+	</developers>
 	<!--contributors / -->
 	<!--licenses / -->
+	<licenses>
+		<license>
+			<name>The Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
 	<!--scm / -->
+	<scm>
+		<connection>scm:git:git://github.com/nhojpatrick/nhojpatrick-hamcrest.git</connection>
+		<developerConnection>scm:git:ssh://github.com:nhojpatrick/nhojpatrick-hamcrest.git</developerConnection>
+		<url>http://github.com/nhojpatrick/nhojpatrick-hamcrest/tree/master</url>
+	</scm>
 	<!--organization / -->
 	<!--build /-->
 	<build>
@@ -118,6 +139,11 @@
 							<include>**/*IT.java</include>
 						</includes>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-gpg-plugin</artifactId>
+					<version>1.6</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -462,6 +488,62 @@
 			</build>
 		</profile>
 		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>attach-javadoc</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>attach-source</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.7</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>false</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>sortpom</id>
 			<build>
 				<plugins>
@@ -625,6 +707,16 @@
 		</dependencies>
 	</dependencyManagement>
 	<!--distributionManagement / -->
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
 	<!--properties / -->
 	<properties>
 		<!-- custom properties -->
