--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,18 +48,24 @@ commands:
             - m2-dependencies-{{ checksum "pom.xml" }}
             - m2-dependencies-
       - run: ./mvnw dependency:go-offline
-      - save_cache:
-          key: m2-dependencies-{{ checksum "pom.xml" }}
-          paths:
-            - ~/.m2/repository
-            - ~/.m2/wrapper
+      #- save_cache:
+      #    key: m2-dependencies-{{ checksum "pom.xml" }}
+      #    paths:
+      #      - ~/.m2/repository
+      #      - ~/.m2/wrapper
       - run: ./mvnw clean install -DskipTests
+      #- save_cache:
+      #    key: m2-dependencies-{{ checksum "pom.xml" }}
+      #    paths:
+      #      - ~/.m2/repository
+      #      - ~/.m2/wrapper
+      - run: ./mvnw test
+      - run: rm -rf ~/.m2/repository/com/github/nhojpatrick/cucumber
       - save_cache:
           key: m2-dependencies-{{ checksum "pom.xml" }}
           paths:
             - ~/.m2/repository
             - ~/.m2/wrapper
-      - run: ./mvnw test
 
 jobs:
   jdk8:
