--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,6 @@ commands:
             </toolchain>
           </toolchains>
           EOF
-      - run: ls -l ~/.m2/toolchains.xml
-      - run: cat ~/.m2/toolchains.xml
 
   std_mvnw:
     description: "Standard mvnw steps"
@@ -48,24 +46,15 @@ commands:
             - m2-dependencies-{{ checksum "pom.xml" }}
             - m2-dependencies-
       - run: ./mvnw dependency:go-offline
-      #- save_cache:
-      #    key: m2-dependencies-{{ checksum "pom.xml" }}
-      #    paths:
-      #      - ~/.m2/repository
-      #      - ~/.m2/wrapper
       - run: ./mvnw clean install -DskipTests
-      #- save_cache:
-      #    key: m2-dependencies-{{ checksum "pom.xml" }}
-      #    paths:
-      #      - ~/.m2/repository
-      #      - ~/.m2/wrapper
       - run: ./mvnw test
-      - run: rm -rf ~/.m2/repository/com/github/nhojpatrick/cucumber
+      - run: rm -rf ~/.m2/repository/com/github/nhojpatrick
       - save_cache:
           key: m2-dependencies-{{ checksum "pom.xml" }}
           paths:
             - ~/.m2/repository
             - ~/.m2/wrapper
+          when: always
 
 jobs:
   jdk8:
@@ -98,6 +87,6 @@ workflows:
   build_all:
     jobs:
       - jdk8
-      - jdk11
-      - jdk13
-      - jdk14
+      #- jdk11
+      #- jdk13
+      #- jdk14
