--- a/pom.xml
+++ b/pom.xml
@@ -346,7 +346,7 @@
 									<version>[1.8,9),[11,)</version>
 								</requireJavaVersion>
 								<requireMavenVersion>
-									<version>[3.6.1,)</version>
+									<version>3.6.0</version>
 								</requireMavenVersion>
 							</rules>
 						</configuration>
