--- a/pom.xml
+++ b/pom.xml
@@ -289,13 +289,9 @@
 						<dependency>
 							<groupId>com.github.nhojpatrick.versions</groupId>
 							<artifactId>nhojpatrick-versions-ruleset</artifactId>
-							<version>1.0</version>
+							<version>1.1</version>
 						</dependency>
 					</dependencies>
-					<configuration>
-						<generateBackupPoms>false</generateBackupPoms>
-						<rulesUri>classpath:///com/github/nhojpatrick/versions/ruleset/rules.xml</rulesUri>
-					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.jacoco</groupId>
@@ -826,7 +822,6 @@
 		<!-- maven user properties -->
 		<downloadSources>true</downloadSources>
 		<downloadJavadocs>true</downloadJavadocs>
-		<generateBackupPoms>false</generateBackupPoms>
 		<!-- Surefire/Failsafe jpms override(s) -->
 		<project.failsafe.argLine.jpms></project.failsafe.argLine.jpms>
 		<project.failsafe.argLine.jpms.global>--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}.tests=ALL-UNNAMED</project.failsafe.argLine.jpms.global>
@@ -861,6 +856,9 @@
 		<sort.sortOrderFile>com/github/nhojpatrick/sortpom/sortorderfile/nhojpatrick.xml</sort.sortOrderFile>
 		<sort.sortPlugins>groupId,artifactId,version,scope</sort.sortPlugins>
 		<sort.sortProperties>false</sort.sortProperties>
+		<!-- versions-maven-plugin -->
+		<generateBackupPoms>false</generateBackupPoms>
+		<maven.version.rules>classpath:///com/github/nhojpatrick/versions/ruleset/rules.xml</maven.version.rules>
 		<!-- JPMS -->
 		<project.Automatic-Module-Name></project.Automatic-Module-Name>
 		<toolchain.vendor>openjdk</toolchain.vendor>
