enable cicd profile on circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,10 +45,12 @@ commands:
           keys:
             - m2-dependencies-{{ checksum "pom.xml" }}
             - m2-dependencies-
-      - run: ./mvnw dependency:go-offline
-      - run: ./mvnw clean install -DskipTests
-      - run: ./mvnw test
-      - run: rm -rf ~/.m2/repository/com/github/nhojpatrick
+      - run: ./mvnw -Pcicd clean install -DskipTests
+      - run: ./mvnw -Pcicd test
+      - run:
+          name: "Tidy Cache before save"
+          command: rm -rf ~/.m2/repository/com/github/nhojpatrick
+          when: always
       - save_cache:
           key: m2-dependencies-{{ checksum "pom.xml" }}
           paths:
