--- a/pom.xml
+++ b/pom.xml
@@ -839,7 +839,7 @@
 		<version.org.hamcrest>2.2</version.org.hamcrest>
 		<version.org.junit.jupiter>5.5.2</version.org.junit.jupiter>
 		<version.org.junit.vintage>5.5.2</version.org.junit.vintage>
-		<version.org.slf4j>1.7.29</version.org.slf4j>
+		<version.org.slf4j>[1.7,1.7.999)</version.org.slf4j>
 		<version.org.spotbugs>3.1.12</version.org.spotbugs>
 		<!-- qa user properties -->
 		<checkstyle.maxAllowedViolations>0</checkstyle.maxAllowedViolations>
