--- a/all/pom.xml
+++ b/all/pom.xml
@@ -59,6 +59,8 @@
 	<!--properties / -->
 	<properties>
 		<project.Automatic-Module-Name>com.github.nhojpatrick.hamcrest.all</project.Automatic-Module-Name>
+		<jacoco.bundle.class.missedcount>999</jacoco.bundle.class.missedcount>
+		<jacoco.bundle.line.coveredratio>0%</jacoco.bundle.line.coveredratio>
 		<spotbugs.skip>true</spotbugs.skip>
 	</properties>
 </project>
