coveralls via environment variable

--- a/pom.xml
+++ b/pom.xml
@@ -314,7 +314,7 @@
 					<artifactId>coveralls-maven-plugin</artifactId>
 					<version>4.3.0</version>
 					<configuration>
-						<repoToken>VH1QoLpXovYxpq3ISzqwjc9K6O3jCJsRd</repoToken>
+						<repoToken>${COVERALLS_REPO_TOKEN}</repoToken>
 					</configuration>
 				</plugin>
 				<plugin>
