--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ commands:
       - run: ./mvnw -Pcicd test
       - run:
           name: "Coveralls"
-          command: ./mvnw -Pcicd,qa_jacoco verify jacoco:report coveralls:report
+          command: ./mvnw -Pcicd,qa_jacoco -DCOVERALLS_REPO_TOKEN=${COVERALLS_REPO_TOKEN} verify jacoco:report coveralls:report
           when: on_success
       - run:
           name: "Tidy Cache before save"
