jacoco excludes META-INF/versions/**

--- a/pom.xml
+++ b/pom.xml
@@ -323,7 +323,7 @@
 					<version>0.8.5</version>
 					<configuration>
 						<excludes>
-							<exclude>META-INF/**</exclude>
+							<exclude>META-INF/versions/**</exclude>
 						</excludes>
 					</configuration>
 					<executions>
