--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
 	<url>https://github.com/nhojpatrick/nhojpatrick-hamcrest</url>
 	<!--prerequisites / -->
 	<!--issueManagement / -->
+	<issueManagement>
+		<system>GITHUB</system>
+		<url>http://github.com/nhojpatrick/nhojpatrick-hamcrest/issues</url>
+	</issueManagement>
 	<!--ciManagement / -->
 	<!--inceptionYear / -->
 	<inceptionYear>2018</inceptionYear>
