--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 						<dependency>
 							<groupId>com.github.nhojpatrick.sortpom</groupId>
 							<artifactId>nhojpatrick-sortpom-sortorderfile</artifactId>
-							<version>1.1</version>
+							<version>[1.1,1.999)</version>
 						</dependency>
 					</dependencies>
 				</plugin>
