--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,26 @@ commands:
             - ~/.m2/wrapper
           when: always
 
+  qa_spotbugs:
+    description: "Standard mvnw spotbugs"
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - m2-dependencies-{{ checksum "pom.xml" }}
+            - m2-dependencies-
+      - run: ./mvnw -Pcicd,qa_spotbugs -DskipTests verify
+      - run:
+          name: "Tidy Cache before save"
+          command: rm -rf ~/.m2/repository/com/github/nhojpatrick
+          when: always
+      - save_cache:
+          key: m2-dependencies-{{ checksum "pom.xml" }}
+          paths:
+            - ~/.m2/repository
+            - ~/.m2/wrapper
+          when: always
+
 jobs:
   jdk8:
     docker:
@@ -89,11 +109,19 @@ jobs:
     steps:
       - std_mvnw
 
+  spotbugs:
+    docker:
+      - image: circleci/openjdk:8-jdk-stretch
+    steps:
+      - install_openjdk_11
+      - qa_spotbugs
+
 workflows:
   version: 2
   build_all:
     jobs:
       - jdk8
+      - spotbugs
       #- jdk11
       #- jdk13
       #- jdk14
