QA steps are only on new branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,8 +179,23 @@ workflows:
     jobs:
       - jdk8
       - checkstyle
+          filters:
+            branches:
+              ignore:
+                - develop
+                - master
       - javadoc
+          filters:
+            branches:
+              ignore:
+                - develop
+                - master
       - spotbugs
+          filters:
+            branches:
+              ignore:
+                - develop
+                - master
       #- jdk11
       #- jdk13
       #- jdk14
