--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,9 @@
 								<!-- Checks for Size Violations.                             -->
 								<!-- See https://checkstyle.sourceforge.io/config_sizes.html -->
 								<module name="LineLength">
+									<property name="fileExtensions" value="java"></property>
 									<property name="max" value="120"></property>
+									<property name="ignorePattern" value="^package.*|^import.*|.*LOGGER.*"></property>
 								</module>
 								<!-- Checks for whitespace                               -->
 								<!-- See http://checkstyle.sf.net/config_whitespace.html -->
@@ -121,6 +123,13 @@
 							</module>
 						</checkstyleRules>
 					</configuration>
+					<dependencies>
+						<dependency>
+							<groupId>com.puppycrawl.tools</groupId>
+							<artifactId>checkstyle</artifactId>
+							<version>${version.com.puppycrawl.tools.checkstyle}</version>
+						</dependency>
+					</dependencies>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -476,13 +485,6 @@
 								</goals>
 							</execution>
 						</executions>
-						<dependencies>
-							<dependency>
-								<groupId>com.puppycrawl.tools</groupId>
-								<artifactId>checkstyle</artifactId>
-								<version>${version.com.puppycrawl.tools.checkstyle}</version>
-							</dependency>
-						</dependencies>
 					</plugin>
 				</plugins>
 			</build>
