--- a/collections/pom.xml
+++ b/collections/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.github.nhojpatrick.hamcrest</groupId>
 		<artifactId>nhojpatrick-hamcrest</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<!--groupId / -->
