--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<!--name / -->
 	<name>Hamcrest extensions</name>
 	<!--version / -->
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<!--description / -->
 	<description>Hamcrest extensions project</description>
 	<!--url / -->
