--- a/pom.xml
+++ b/pom.xml
@@ -358,6 +358,55 @@
 								<goal>prepare-agent</goal>
 							</goals>
 						</execution>
+						<execution>
+							<id>jacoco-check</id>
+							<phase>validate</phase>
+							<goals>
+								<goal>check</goal>
+							</goals>
+							<configuration>
+								<rules>
+									<rule>
+										<element>BUNDLE</element>
+										<excludes>
+											<exclude>*Test</exclude>
+											<exclude>*IT</exclude>
+										</excludes>
+										<limits>
+											<limit>
+												<counter>LINE</counter>
+												<value>COVEREDRATIO</value>
+												<minimum>${jacoco.bundle.line.coveredratio}</minimum>
+											</limit>
+											<limit>
+												<counter>CLASS</counter>
+												<value>MISSEDCOUNT</value>
+												<maximum>${jacoco.bundle.class.missedcount}</maximum>
+											</limit>
+										</limits>
+									</rule>
+									<!--										<rule>-->
+									<!--											<element>CLASS</element>-->
+									<!--											<excludes>-->
+									<!--												<exclude>*Test</exclude>-->
+									<!--												<exclude>*IT</exclude>-->
+									<!--											</excludes>-->
+									<!--											<limits>-->
+									<!--												<limit>-->
+									<!--													<counter>LINE</counter>-->
+									<!--													<value>COVEREDRATIO</value>-->
+									<!--													<minimum>${jacoco.class.line.coveredratio}</minimum>-->
+									<!--												</limit>-->
+									<!--												<limit>-->
+									<!--													<counter>CLASS</counter>-->
+									<!--													<value>MISSEDCOUNT</value>-->
+									<!--													<maximum>${jacoco.class.class.missedcount}</maximum>-->
+									<!--												</limit>-->
+									<!--											</limits>-->
+									<!--										</rule>-->
+								</rules>
+							</configuration>
+						</execution>
 					</executions>
 				</plugin>
 				<plugin>
@@ -402,26 +451,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>versions-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>versions-check</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>display-dependency-updates</goal>
-							<goal>display-parent-updates</goal>
-							<goal>display-plugin-updates</goal>
-							<goal>display-property-updates</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-			</plugin>
 		</plugins>
 	</build>
 	<!--profiles / -->
@@ -463,10 +492,8 @@
 				<base.java.version>11</base.java.version>
 				<maven.compiler.release>11</maven.compiler.release>
 				<project.custom.java.version>11</project.custom.java.version>
-				<project.failsafe.argLine.jpms>${project.failsafe.argLine.jpms.global}
-                    ${project.failsafe.argLine.jpms.module}</project.failsafe.argLine.jpms>
-				<project.surefire.argLine.jpms>${project.surefire.argLine.jpms.global}
-                    ${project.surefire.argLine.jpms.module}</project.surefire.argLine.jpms>
+				<project.failsafe.argLine.jpms>${project.failsafe.argLine.jpms.global} ${project.failsafe.argLine.jpms.module}</project.failsafe.argLine.jpms>
+				<project.surefire.argLine.jpms>${project.surefire.argLine.jpms.global} ${project.surefire.argLine.jpms.module}</project.surefire.argLine.jpms>
 			</properties>
 		</profile>
 		<profile>
@@ -499,57 +526,6 @@
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>jacoco-check</id>
-								<phase>validate</phase>
-								<goals>
-									<goal>check</goal>
-								</goals>
-								<configuration>
-									<rules>
-										<rule>
-											<element>BUNDLE</element>
-											<excludes>
-												<exclude>*Test</exclude>
-												<exclude>*IT</exclude>
-											</excludes>
-											<limits>
-												<limit>
-													<counter>LINE</counter>
-													<value>COVEREDRATIO</value>
-													<minimum>${jacoco.bundle.line.coveredratio}</minimum>
-												</limit>
-												<limit>
-													<counter>CLASS</counter>
-													<value>MISSEDCOUNT</value>
-													<maximum>${jacoco.bundle.class.missedcount}</maximum>
-												</limit>
-											</limits>
-										</rule>
-										<!--										<rule>-->
-										<!--											<element>CLASS</element>-->
-										<!--											<excludes>-->
-										<!--												<exclude>*Test</exclude>-->
-										<!--												<exclude>*IT</exclude>-->
-										<!--											</excludes>-->
-										<!--											<limits>-->
-										<!--												<limit>-->
-										<!--													<counter>LINE</counter>-->
-										<!--													<value>COVEREDRATIO</value>-->
-										<!--													<minimum>${jacoco.class.line.coveredratio}</minimum>-->
-										<!--												</limit>-->
-										<!--												<limit>-->
-										<!--													<counter>CLASS</counter>-->
-										<!--													<value>MISSEDCOUNT</value>-->
-										<!--													<maximum>${jacoco.class.class.missedcount}</maximum>-->
-										<!--												</limit>-->
-										<!--											</limits>-->
-										<!--										</rule>-->
-									</rules>
-								</configuration>
-							</execution>
-						</executions>
 					</plugin>
 				</plugins>
 			</build>
@@ -892,15 +868,13 @@
 		<downloadJavadocs>true</downloadJavadocs>
 		<!-- Surefire/Failsafe jpms override(s) -->
 		<project.failsafe.argLine.jpms></project.failsafe.argLine.jpms>
-		<project.failsafe.argLine.jpms.global>--add-opens
-            ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}=ALL-UNNAMED</project.failsafe.argLine.jpms.global>
+		<project.failsafe.argLine.jpms.global>--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}=ALL-UNNAMED</project.failsafe.argLine.jpms.global>
 		<project.failsafe.argLine.jpms.module></project.failsafe.argLine.jpms.module>
 		<project.surefire.argLine.jpms></project.surefire.argLine.jpms>
-		<project.surefire.argLine.jpms.global>--add-opens
-            ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}=ALL-UNNAMED
-            --add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}=org.junit.platform.commons
-            --add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
-            --add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED</project.surefire.argLine.jpms.global>
+		<project.surefire.argLine.jpms.global>--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}=ALL-UNNAMED
+			--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}=org.junit.platform.commons
+			--add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+			--add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED</project.surefire.argLine.jpms.global>
 		<project.surefire.argLine.jpms.module></project.surefire.argLine.jpms.module>
 		<!-- -->
 		<version.com.puppycrawl.tools.checkstyle>8.27</version.com.puppycrawl.tools.checkstyle>
@@ -913,8 +887,8 @@
 		<version.com.github.spotbugs>[3.1.12,3.1.999)</version.com.github.spotbugs>
 		<!-- qa user properties -->
 		<checkstyle.maxAllowedViolations>0</checkstyle.maxAllowedViolations>
-		<jacoco.bundle.class.missedcount>999</jacoco.bundle.class.missedcount>
-		<jacoco.bundle.line.coveredratio>0%</jacoco.bundle.line.coveredratio>
+		<jacoco.bundle.class.missedcount>0</jacoco.bundle.class.missedcount>
+		<jacoco.bundle.line.coveredratio>100%</jacoco.bundle.line.coveredratio>
 		<pmd.maxAllowedViolations>0</pmd.maxAllowedViolations>
 		<spotbugs.maxAllowedViolations>0</spotbugs.maxAllowedViolations>
 		<!-- sortpom -->
