--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -70,8 +70,7 @@
 	<!--properties / -->
 	<properties>
 		<project.Automatic-Module-Name>com.github.nhojpatrick.hamcrest.testing</project.Automatic-Module-Name>
-		<checkstyle.maxAllowedViolations>12</checkstyle.maxAllowedViolations>
-		<jacoco.bundle.class.missedcount>999</jacoco.bundle.class.missedcount>
-		<jacoco.bundle.line.coveredratio>0%</jacoco.bundle.line.coveredratio>
+		<project.surefire.argLine.jpms.module></project.surefire.argLine.jpms.module>
+		<maven.deploy.skip>true</maven.deploy.skip>
 	</properties>
 </project>
