Sonatype JavaDoc fix...

--- a/all/pom.xml
+++ b/all/pom.xml
@@ -60,7 +60,7 @@
 	<properties>
 		<project.Automatic-Module-Name>com.github.nhojpatrick.hamcrest.all</project.Automatic-Module-Name>
 		<project.surefire.argLine.jpms.module></project.surefire.argLine.jpms.module>
-		<maven.javadoc.skip>true</maven.javadoc.skip>
+		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
 		<spotbugs.skip>true</spotbugs.skip>
 	</properties>
 </project>
