--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,11 +93,8 @@ commands:
             - m2-dependencies-{{ checksum "pom.xml" }}
             - m2-dependencies-
       - run:
-          name: "Maven Jdk8 Clean Install SkipTests"
-          command: ./mvnw -Pcicd clean install -DskipTests
-      - run:
-          name: "Maven Jdk8 Tests"
-          command: ./mvnw -Pcicd test
+          name: "Maven Jdk8 Clean Install"
+          command: ./mvnw -Pcicd clean install
       - run:
           name: "Coveralls"
           command: ./mvnw -Pcicd,qa_jacoco -DCOVERALLS_REPO_TOKEN=${COVERALLS_REPO_TOKEN} verify jacoco:report coveralls:report
