--- a/pom.xml
+++ b/pom.xml
@@ -875,7 +875,7 @@
 		<version.org.apache.commons.lang3>[3.8,3.99)</version.org.apache.commons.lang3>
 		<version.org.apache.logging.log4j>[2.12.1,2.12.99)</version.org.apache.logging.log4j>
 		<version.org.hamcrest>[2.2,2.99)</version.org.hamcrest>
-		<version.org.junit.jupiter>5.6.0-M1</version.org.junit.jupiter>
+		<version.org.junit.jupiter>5.6.0-RC1</version.org.junit.jupiter>
 		<version.org.slf4j>[1.7.0,1.7.99)</version.org.slf4j>
 		<version.com.github.spotbugs>[3.1.12,3.1.99)</version.com.github.spotbugs>
 		<!-- qa user properties -->
