--- a/pom.xml
+++ b/pom.xml
@@ -737,6 +737,7 @@
 		<module>all</module>
 		<module>collections</module>
 		<module>datetime</module>
+		<module>datetime-java.sql</module>
 		<module>lang</module>
 		<module>optionals</module>
 		<module>testing</module>
@@ -762,6 +763,11 @@
 			<dependency>
 				<groupId>com.github.nhojpatrick.hamcrest</groupId>
 				<artifactId>nhojpatrick-hamcrest-datetime</artifactId>
+				<version>[${project.version},${project.custom.next.version})</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.nhojpatrick.hamcrest</groupId>
+				<artifactId>nhojpatrick-hamcrest-datetime-java.sql</artifactId>
 				<version>[${project.version},${project.custom.next.version})</version>
 			</dependency>
 			<dependency>
