--- a/datetime-java.sql/pom.xml
+++ b/datetime-java.sql/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<!--groupId / -->
 	<!--artifactId / -->
-	<artifactId>nhojpatrick-hamcrest-all</artifactId>
+	<artifactId>nhojpatrick-hamcrest-datetime-java.sql</artifactId>
 	<!--packaging / -->
 	<packaging>jar</packaging>
 	<!--name / -->
@@ -37,23 +37,35 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.github.nhojpatrick.hamcrest</groupId>
-			<artifactId>nhojpatrick-hamcrest-collections</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.github.nhojpatrick.hamcrest</groupId>
 			<artifactId>nhojpatrick-hamcrest-datetime</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.github.nhojpatrick.hamcrest</groupId>
-			<artifactId>nhojpatrick-hamcrest-datetime-java.sql</artifactId>
+			<artifactId>nhojpatrick-hamcrest-testing</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.github.nhojpatrick.hamcrest</groupId>
-			<artifactId>nhojpatrick-hamcrest-lang</artifactId>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.github.nhojpatrick.hamcrest</groupId>
-			<artifactId>nhojpatrick-hamcrest-optionals</artifactId>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
 		</dependency>
 	</dependencies>
 	<!--reports (Deprecated) / -->
@@ -62,9 +74,7 @@
 	<!--distributionManagement / -->
 	<!--properties / -->
 	<properties>
-		<project.Automatic-Module-Name>com.github.nhojpatrick.hamcrest.all</project.Automatic-Module-Name>
+		<project.Automatic-Module-Name>com.github.nhojpatrick.hamcrest.datetime.java.sql</project.Automatic-Module-Name>
 		<project.surefire.argLine.jpms.module></project.surefire.argLine.jpms.module>
-		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
-		<spotbugs.skip>true</spotbugs.skip>
 	</properties>
 </project>
