qa_checkstyle profile defaultGoal

--- a/pom.xml
+++ b/pom.xml
@@ -493,6 +493,7 @@
 		<profile>
 			<id>qa_checkstyle</id>
 			<build>
+				<defaultGoal>validate</defaultGoal>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
